[package]
name = "rustvillage"
version = "0.1.0"
edition = "2021"

[lints.clippy]
type_complexity = "allow"

[dependencies]
#bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy = { version = "0.15.1", features = ["trace"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_atmosphere = "0.12.2"
bevy_cobweb_ui = { version = "0.9.0", features = ["hot_reload"] }
directories = "6.0.0"
leafwing-input-manager = "0.16.0"
moonshine-core = "0.2.1"
moonshine-object = "0.2.1"
moonshine-view = "0.1.6"
noisy_bevy = "0.8.0"
rand = "0.9.0"
bevy_cobweb = "0.14.3"
bevy-inspector-egui = "0.29.1"
i-cant-believe-its-not-bsn = "0.3.0"
pathfinding = "4.13.1"
beet = { git = "https://github.com/mrchantey/beet", branch = "main" }
bresenham = "0.1.1"
wyrand = "0.3.2"
bevy_easings = "0.15.0"
bevy_mod_async = "0.8.0"

[profile.dev.package."*"]
opt-level = 3
