[package]
name = "rustvillage"
version = "0.1.0"
edition = "2021"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
#bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_dylib = "0.15.3"
bevy = { version = "0.15.3", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "trace"
] }
bevy_kira_audio = { version = "0.22.0" }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_atmosphere = "0.12.2"
directories = "6.0.0"
leafwing-input-manager = "0.16.0"
moonshine-core = "0.2.1"
moonshine-object = "0.2.1"
moonshine-view = "0.1.6"
noisy_bevy = "0.8.0"
rand = "0.9.0"
bevy-inspector-egui = "0.29.1"
i-cant-believe-its-not-bsn = "0.3.0"
pathfinding = "4.13.1"
beet = { git = "https://github.com/mrchantey/beet", branch = "main" }
bresenham = "0.1.1"
wyrand = "0.3.2"
bevy_easings = "0.15.0"
bevy_mod_async = "0.8.0"
bevy_hanabi = "0.14.0"

[profile.dev.package."*"]
opt-level = 3
