[package]
name = "rustvillage"
version = "0.1.0"
edition = "2024"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
#bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_dylib = "0.16.0"
bevy = { version = "0.16.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "trace",
    "std",
    "async_executor",
    # "track_location" # Tmp only for debugging
] }
bevy_kira_audio = "0.23.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
directories = "6.0.0"
bevy_enhanced_input = "0.11.0"
moonshine-view = "0.1.8"
moonshine-object = "0.2.4"
moonshine-core = "0.3.1"
noisy_bevy = { git = "https://github.com/johanhelsing/noisy_bevy", branch = "bevy-0.16"}
rand = "0.9.0"
bevy-inspector-egui = "0.31.0"
pathfinding = "4.13.1"
beet = { git = "https://github.com/mrchantey/beet", branch = "main" }
bresenham = "0.1.1"
wyrand = "0.3.2"
bevy_easings = { git = "https://github.com/vleue/bevy_easings", branch = "main"}
bevy_mod_async = "0.10.0"
bevy_hanabi = { git="https://github.com/djeedai/bevy_hanabi", branch = "main" }
bevy_platform = "0.16.0"
bevy_egui = "0.34.1"
bytemuck = "1.21.0"

[profile.dev.package."*"]
opt-level = 3
